# Trajectory

./: Cargo.toml  README.md  build.rs
docs/: UAT.md  UAT_TEST_CASES.md  UAT_TEST_PLAN.md
examples/: gen_relief_png.rs  jewelry_ring.rs  surface_heightmap_zigzag.rs  surface_zigzag_abb.rs
frontend/: index.html
src/: collision.rs  config.rs  frame.rs  geometry.rs  lib.rs  main.rs  math3d.rs  path.rs  relief_job.rs  rrt.rs  tool.rs  vision.rs
src/post/: abb_rapid.rs  mod.rs  provenance.rs
src/surface/: heightmap.rs  mod.rs  pointcloud.rs  stl.rs
src/toolpath/: mod.rs  zigzag.rs
tests/: calibration_golden.rs  heightmap_tests.rs  post_abb_tests.rs  rrt_tests.rs  surface_tests.rs  toolpath_tests.rs
tests/fixtures/: flat_plane.stl  tool_ball6.json  workpiece_identity.json
