[package]
name = "trajectory"
version = "0.2.0"
edition = "2021"
description = "RRT/RRT* and 3D surface toolpath planning for CNC and robot machining"

[features]
default = ["surface", "abb"]
surface = ["dep:nalgebra", "dep:stl_io"]
abb = []
pointcloud = []
heightmap = []
vision = ["dep:opencv"]

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
nalgebra = { version = "0.33", features = ["serde-serialize"], optional = true }
stl_io = { version = "0.8", optional = true }
opencv = { version = "0.93", optional = true }
