[package]
name = "trajectory"
version = "0.2.0"
edition = "2021"
description = "RRT/RRT* and 3D surface toolpath planning for CNC and robot machining"

[features]
default = ["surface", "abb"]
surface = ["dep:nalgebra", "dep:stl_io"]
abb = ["dep:sha2"]
pointcloud = []
heightmap = ["surface", "dep:png"]
vision = ["dep:opencv"]
cli = ["heightmap", "abb", "dep:clap", "dep:tracing-subscriber"]
web = ["cli", "dep:axum", "dep:tokio", "dep:tower-http"]

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
nalgebra = { version = "0.33", features = ["serde-serialize"], optional = true }
stl_io = { version = "0.8", optional = true }
png = { version = "0.17", optional = true }
sha2 = { version = "0.10", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
axum = { version = "0.7", optional = true, features = ["multipart"] }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.5", optional = true, features = ["cors", "trace"] }
opencv = { version = "0.93", optional = true }

[[example]]
name = "surface_heightmap_zigzag"
required-features = ["heightmap"]

[[example]]
name = "gen_relief_png"
required-features = ["heightmap"]

[[bin]]
name = "trajectory-cli"
path = "src/bin/trajectory_cli.rs"
required-features = ["cli"]

[[bin]]
name = "trajectory-web"
path = "src/bin/trajectory_web.rs"
required-features = ["web"]
